--- a/src/components/ui/layout/PokemonCard/styles.module.css
+++ b/src/components/ui/layout/PokemonCard/styles.module.css
@@ -1,5 +1,5 @@
 .root{
-  @apply px-2.5 py-2.5 relative min-h-[112px] overflow-hidden;
+  @apply px-2.5 py-2.5 relative min-h-[112px] overflow-hidden ease-linear duration-300;
 }
 
 .root .id {
